--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#2563eb" />
   <meta name="description" content="Personal rotation schedule tracker for nursing students" />
 
-  <title>Clinical Calendar</title>
+  <title>Clinical Cal</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
